--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "test": "jest",
-    "build": "tsc && node vite.build.js",
+    "build": "tsc --project tsconfig.build.json && node vite.build.js",
     "build:types": "tsc src/*.ts --declaration --emitDeclarationOnly --declarationDir dist/",
     "preview": "vite preview"
   },
@@ -24,6 +24,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "@zerollup/ts-transform-paths": "^1.7.18",
     "typescript": "^4.8.3",
     "vite": "^3.1.7"
   }
