--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,8 @@
         "useDefineForClassFields": true,
         "lib": ["DOM", "DOM.Iterable", "ESNext"],
         "types": ["jest"],
-        "allowJs": true,
+        "allowJs": false,
         "skipLibCheck": true,
-        "declaration": true,
-        "emitDeclarationOnly": true,
         "esModuleInterop": false,
         "allowSyntheticDefaultImports": true,
         "strict": true,
@@ -15,8 +13,8 @@
         "module": "ESNext",
         "moduleResolution": "Node",
         "resolveJsonModule": true,
-        "declarationMap": true,
         "isolatedModules": true,
+        "noEmit": true,
         "jsx": "react-jsx",
         "baseUrl": "./src",
         "paths": {
