--- a/package.json
+++ b/package.json
@@ -1,31 +1,47 @@
 {
-  "name": "framie",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "test": "jest",
-    "build": "tsc --project tsconfig.build.json && node vite.build.js",
-    "build:types": "tsc src/*.ts --declaration --emitDeclarationOnly --declarationDir dist/",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@types/jest": "^29.0.3",
-    "error-stack-parser": "^2.1.4",
-    "jest": "^29.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ts-jest": "^29.0.2",
-    "ts-node": "^10.9.1",
-    "uniqid": "^5.4.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
-    "@zerollup/ts-transform-paths": "^1.7.18",
-    "typescript": "^4.8.3",
-    "vite": "^3.1.7"
-  }
+    "name": "framie",
+    "private": true,
+    "version": "0.0.1",
+    "type": "module",
+    "files": [
+        "dist/*",
+        "container/*",
+        "index.d.ts"
+    ],
+    "types": "index.d.ts",
+    "exports": {
+        "./container": {
+            "default": "./dist/container/index.js",
+            "require": "./dist/container/index.cjs"
+        },
+        "./container/react": {
+            "default": "./dist/container/react.js",
+            "require": "./dist/container/react.cjs"
+        }
+    },
+    "scripts": {
+        "dev": "vite",
+        "test": "jest",
+        "build": "tsc --project tsconfig.build.json && node vite.build.js",
+        "build:types": "tsc src/*.ts --declaration --emitDeclarationOnly --declarationDir dist/",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@types/jest": "^29.0.3",
+        "error-stack-parser": "^2.1.4",
+        "jest": "^29.0.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "ts-jest": "^29.0.2",
+        "ts-node": "^10.9.1",
+        "uniqid": "^5.4.0"
+    },
+    "devDependencies": {
+        "@types/react": "^18.0.17",
+        "@types/react-dom": "^18.0.6",
+        "@vitejs/plugin-react": "^2.1.0",
+        "@zerollup/ts-transform-paths": "^1.7.18",
+        "typescript": "^4.8.3",
+        "vite": "^3.1.7"
+    }
 }
